Fix feature with the history, and put selector for role.

--- a/Views/Employees/Add.cshtml
+++ b/Views/Employees/Add.cshtml
@@ -27,16 +27,12 @@
     </div>
     <div class="mb-3">
         <label for="" class="form-label">Role</label>
-        <input type="text" class="form-control" asp-for="Role">
-    </div>
-    @* <div class="mb-3">
-        <label for="" class="form-label">Role</label>
-        <select class="form-control" name="" id="" asp-for="Role">
+        <select class="form-select" name="Role">
             <option value="Worker">Worker</option>
             <option value="Specialist">Specialist</option>
             <option value="Manager">Manager</option>
         </select>
-    </div> *@
+    </div>
     <div class="mb-3">
         <label for="" class="form-label">Salary</label>
         <input type="text" class="form-control" asp-for="Salary">
