--- a/Views/Employees/index.cshtml
+++ b/Views/Employees/index.cshtml
@@ -31,9 +31,8 @@
             <td>@employee.Role</td>
             <td>@employee.Salary</td>    
             <td><a href='Employees/View/@employee.Id'>View</a></td>
-            <td><a href='Employees/DoRevision/@employee.Id'>Revision</a></td>
+            <td><a href='Employees/@employee.Id/Revision'>Revision</a></td>
         </tr>
-
         }
     </tbody>
 </table>
