--- a/Views/Employees/Add.cshtml
+++ b/Views/Employees/Add.cshtml
@@ -2,7 +2,7 @@
 @{
 }
 
-<form method="POST" action="Add">
+<form method="POST" action="create">
     <div class="mb-3">
         <label for="" class="form-label">Name</label>
         <input type="text" class="form-control" asp-for="Name">
