--- a/Views/Employees/View.cshtml
+++ b/Views/Employees/View.cshtml
@@ -34,14 +34,14 @@
         <label for="" class="form-label">Role</label>
         <input type="text" class="form-control" asp-for="Role">
     </div>
-    @* <div class="mb-3">
+    <div class="mb-3">
         <label for="" class="form-label">Role</label>
         <select class="form-control" name="" id="" asp-for="Role">
             <option value="Worker">Worker</option>
             <option value="Specialist">Specialist</option>
             <option value="Manager">Manager</option>
         </select>
-    </div> *@
+    </div>
     <div class="mb-3">
 
         <label for="" class="form-label">Salary</label>
