--- a/Views/Employees/View.cshtml
+++ b/Views/Employees/View.cshtml
@@ -32,11 +32,7 @@
     </div>
     <div class="mb-3">
         <label for="" class="form-label">Role</label>
-        <input type="text" class="form-control" asp-for="Role">
-    </div>
-    <div class="mb-3">
-        <label for="" class="form-label">Role</label>
-        <select class="form-control" name="" id="" asp-for="Role">
+        <select class="form-select" name="Role" asp-for="Role">
             <option value="Worker">Worker</option>
             <option value="Specialist">Specialist</option>
             <option value="Manager">Manager</option>
